strict null check template updates

--- a/src/app/nav-drawer/nav-item/nav-item.component.html
+++ b/src/app/nav-drawer/nav-item/nav-item.component.html
@@ -1,2 +1,2 @@
-<i class="material-icons">{{navItem.icon}}</i>
-<h5>{{navItem.title}}</h5>
+<i class="material-icons">{{navItem?.icon}}</i>
+<h5>{{navItem?.title}}</h5>
