--- a/src/app/shared/clip-card/clip-card.component.html
+++ b/src/app/shared/clip-card/clip-card.component.html
@@ -1,7 +1,8 @@
 <div class="clip-card mat-ripple mat-elevation-z1"
      (click)="editClipService.editClip(clip)"
      #clip_card
-     matRipple>
+     matRipple
+     *ngIf="clip !== undefined">
     <div class="title-container">
         <h6 class="title">{{clip.title}}</h6>
         <span class="sub-title">
