Update thumb-hover-preview: add content

--- a/src/app/shared/clip-card/thumb-hover-preview/thumb-hover-preview.component.html
+++ b/src/app/shared/clip-card/thumb-hover-preview/thumb-hover-preview.component.html
@@ -1,3 +1,2 @@
-<p>
-  thumb-hover-preview works!
-</p>
+<img src="{{clip.file.thumbnailUrl}}" alt="Thumbnail not found!">
+<video src="{{clip.file.url}}" *ngIf="hovering" #video_preview></video>
