Add feature modules

--- a/src/app/shared/components/clip-card/edit-clip/edit-clip.component.html
+++ b/src/app/shared/components/clip-card/edit-clip/edit-clip.component.html
@@ -13,5 +13,6 @@
 <video src="../../../../assets/demo_clip.mp4"></video>
 <div class="buttons">
     <app-button outlined (clicked)="editClipService.closeEdit()">CANCEL</app-button>
-    <app-button primary>SAVE</app-button>
+    <app-button primary (clicked)="editClipService.save()">SAVE</app-button>
 </div>
+<img src="C:\Users\Orion\Pictures\Photography\2019\March\Portland\Nick BW\img014.jpg" alt="">
