--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,9 @@ body {
 }
 
 app-root {
+    border: 2px solid $color-secondary;
+    border-top-width: 1px;
+    padding-top: 30px;
     height: 100%;
     width: 100%;
     display: flex;
