--- a/src/app/window-title-bar/window-title-bar.component.scss
+++ b/src/app/window-title-bar/window-title-bar.component.scss
@@ -9,10 +9,10 @@
     align-items: center;
 
     top: 1px;
-    left: 0;
+    left: 2px;
     margin: 0;
     height: 29px;
-    width: 100%;
+    width: calc(100% - 4px);
     z-index: 1000;
 
     background: $color-secondary;
@@ -20,12 +20,13 @@
 
     .cliply-title {
         margin: 0;
-        margin-left: 15px;
+        margin-left: 10px;
         color: $color-font-secondary;
     }
 
     .title-bar-buttons {
         margin-top: -2px;
+        margin-right: -2px;
         display: flex;
     }
 }
