Add LocalFilePipe to make path references more readable

--- a/src/app/shared/components/clip-card/thumb-hover-preview/thumb-hover-preview.component.html
+++ b/src/app/shared/components/clip-card/thumb-hover-preview/thumb-hover-preview.component.html
@@ -1,2 +1,2 @@
-<img src="{{clip.file.thumbnailUrl}}" alt="Thumbnail not found!">
-<video src="{{clip.file.url}}" *ngIf="hovering" #video_preview></video>
+<img [src]="clip.file.thumbnailPath | loadLocalFile" alt="Thumbnail not found!">
+<video [src]="clip.file.path | loadLocalFile" *ngIf="hovering" #video_preview></video>
