--- a/src/app/shared/components/clip-card/clip-card.component.scss
+++ b/src/app/shared/components/clip-card/clip-card.component.scss
@@ -19,6 +19,10 @@
         .title {
             font-weight: $font-weight-semibold;
             font-size: 21px;
+
+            &.title-unchanged {
+                opacity: 0.6;
+            }
         }
 
         .sub-title {
