--- a/src/app/shared/components/clip-card/edit-clip/edit-clip.component.html
+++ b/src/app/shared/components/clip-card/edit-clip/edit-clip.component.html
@@ -1,11 +1,11 @@
 <form>
     <mat-form-field>
         <mat-label>Clip Title</mat-label>
-        <input name="clip-title" [(ngModel)]="clip.title" matInput>
+        <input name="clip-title" [(ngModel)]="editClipService.clipToEdit.title" matInput>
     </mat-form-field>
     <div class="youtube-info">
-        <mat-checkbox name="upload-to-youtube" [(ngModel)]="clip.uploadToYoutube">Upload to YouTube</mat-checkbox>
-        <mat-radio-group class="fade-in-fast" name="youtube-privacy" [(ngModel)]="clip.youtubeMetadata.privacy" *ngIf="clip.uploadToYoutube">
+        <mat-checkbox name="upload-to-youtube" [(ngModel)]="editClipService.clipToEdit.uploadToYoutube">Upload to YouTube</mat-checkbox>
+        <mat-radio-group class="fade-in-fast" name="youtube-privacy" [(ngModel)]="editClipService.clipToEdit.youtubeMetadata.privacy" *ngIf="editClipService.clipToEdit.uploadToYoutube">
             <mat-radio-button [value]="privacy" *ngFor="let privacy of youtubePrivacies">{{privacy}}</mat-radio-button>
         </mat-radio-group>
     </div>
