--- a/src/app/shared/components/trim-video-slider/trim-video-slider.component.html
+++ b/src/app/shared/components/trim-video-slider/trim-video-slider.component.html
@@ -1,11 +1,18 @@
-<div class="runner runner-inactive">
+<div class="runner runner-inactive" #sliderRef>
     <div class="active-runner-container">
-        <div class="runner runner-active"></div>
+        <div class="runner runner-active" #activeRunnerRef></div>
     </div>
-    <div class="thumb start-thumb" [style.left.%]="startThumb.positionPercent" (mouseover)="showStartThumbLabel = true" (mouseleave)="showStartThumbLabel = false" #startThumbRef>
-        <span class="thumb-label" *ngIf="showStartThumbLabel" @fadeInOut>0:02</span>
+    <div class="thumb start-thumb"
+         [style.left.%]="startThumb.positionPercent"
+         (pointerdown)="thumbPointerDown(startThumb, $event)"
+         (pointerup)="thumbPointerUp(startThumb, $event)"
+         #startThumbRef>
+        <span class="thumb-label" *ngIf="startThumb.showLabel" @fadeInOut>0:02</span>
     </div>
-    <div class="thumb end-thumb" (mouseover)="showEndThumbLabel = true" (mouseleave)="showEndThumbLabel = false" #endThumbRef>
-        <span class="thumb-label" *ngIf="showEndThumbLabel" @fadeInOut>2:43</span>
+    <div class="thumb end-thumb"
+         (mousedown)="thumbMouseDown(endThumb, $event)"
+         (mouseup)="thumbMouseUp(endThumb, $event)"
+         #endThumbRef>
+        <span class="thumb-label" *ngIf="endThumb.showLabel" @fadeInOut>2:43</span>
     </div>
 </div>
