--- a/src/app/shared/components/trim-video-slider/trim-video-slider.component.scss
+++ b/src/app/shared/components/trim-video-slider/trim-video-slider.component.scss
@@ -1,18 +1,20 @@
 @import 'colors.scss';
 
 :host {
-    margin-top: 6px;
+    margin-top: 12px;
     display: flex;
 
     .runner.runner-inactive {
         position: relative;
-        height: 6px;
+        height: 4px;
         border-radius: 6px;
+        margin-bottom: -2px;
         width: 100%;
         background: rgba($color-secondary-dark, 0.5);
 
         .active-runner-container {
             position: absolute;
+            top: -1px;
             width: 100%;
 
             .runner-active {
@@ -26,7 +28,7 @@
         .thumb {
             position: absolute;
             left: 0;
-            top: -3px;
+            top: -4px;
             height: 12px;
             width: 12px;
             border-radius: 100%;
@@ -39,12 +41,6 @@
                 transform: scale(1.2);
             }
 
-            &:hover {
-                .thumb-label {
-                    opacity: 1;
-                }
-            }
-
             &.end-thumb {
                 left: auto;
                 right: 0;
@@ -52,7 +48,7 @@
 
             .thumb-label {
                 position: absolute;
-                bottom: 16px;
+                bottom: 20px;
                 font-size: 10px;
                 width: 40px;
                 left: -14px;
@@ -61,8 +57,35 @@
                 background: $color-secondary;
                 padding: 4px 6px;
                 border-radius: 4px;
-                opacity: 0;
                 transition: opacity 0.2s ease;
+
+                .thumb-label-text {
+                    position: relative;
+                    z-index: 2;
+                }
+
+                .thumb-label-triangle {
+                    position: absolute;
+                    top: auto;
+                    bottom: -2px;
+                    left: 50%;
+                    z-index: 1;
+
+                    background: $color-secondary;
+                    width: 16px;
+                    height: 16px;
+                    border-radius: 4px;
+                    transform-origin: 50% 50%;
+                    transform: translateX(-50%) rotate(45deg);
+                }
+
+                &.active {
+                    @keyframes float { from { transform: translateY(0px); } to { transform: translateY(-5px); } }
+                    animation-name: float;
+                    animation-duration: 0.5s;
+                    animation-direction: alternate;
+                    animation-iteration-count: infinite;
+                }
             }
         }
     }
