--- a/src/app/shared/components/trim-video-slider/trim-video-slider.component.scss
+++ b/src/app/shared/components/trim-video-slider/trim-video-slider.component.scss
@@ -1,10 +1,13 @@
 @import 'colors.scss';
 
 :host {
-    margin-top: 12px;
+    height: 20px;
+    padding-top: 6px;
+    margin-top: 16px;
     display: flex;
+    cursor: pointer;
 
-    .runner.runner-inactive {
+    .runner.runner-unselected {
         position: relative;
         height: 4px;
         border-radius: 6px;
@@ -17,25 +20,53 @@
             top: -1px;
             width: 100%;
 
-            .runner-active {
+            .runner-selected {
                 width: calc(100% - 12px);
                 margin-left: 6px;
-                background: $color-secondary-dark;
+                background: rgba($color-secondary-dark, 0.75);
                 height: 6px;
+            }
+        }
+
+        .progress-thumb-head, .progress-thumb-ghost {
+            position: relative;
+            height: 16px;
+            width: 6px;
+            border-radius: 2px;
+            background: $color-secondary;
+            z-index: 1;
+            box-shadow: 0 0 16px -1px $color-primary;
+
+            &.progress-thumb-ghost {
+                position: absolute;
+                background: rgba($color-secondary, 0.5);
+                top: -6px;
             }
         }
 
         .thumb {
             position: absolute;
             left: 0;
-            top: -4px;
-            height: 12px;
-            width: 12px;
-            border-radius: 100%;
-            background: $color-secondary;
-            cursor: pointer;
-            transition: transform 0.1s ease;
+            top: -6px;
+            transition: transform 0.1s ease, opacity 0.1s ease;
             transform-origin: 50% 50%;
+            opacity: 1;
+
+            &.hidden {
+                opacity: 0;
+            }
+
+            img.thumb-head {
+                position: relative;
+                height: 14px;
+                -webkit-user-drag: none;
+                filter: drop-shadow(4px 0px 6px rgba(black, 0.6));
+                z-index: 2;
+
+                &.left {
+                    transform: rotate(180deg);
+                }
+            }
 
             &:active {
                 transform: scale(1.2);
@@ -46,12 +77,27 @@
                 right: 0;
             }
 
+            &.progress-thumb {
+                &:active {
+                    transform: scale(1);
+                }
+
+                &.returning {
+                    transition: opacity 0.1s ease, left 0.1s;
+                }
+
+                .thumb-label {
+                    left: -20px;
+                    bottom: 24px;
+                }
+            }
+
             .thumb-label {
                 position: absolute;
-                bottom: 20px;
-                font-size: 10px;
-                width: 40px;
-                left: -14px;
+                bottom: 26px;
+                font-size: 12px;
+                width: 48px;
+                left: -18px;
                 text-align: center;
                 color: $color-font-secondary;
                 background: $color-secondary;
@@ -65,6 +111,7 @@
                 }
 
                 .thumb-label-triangle {
+                    display: none;
                     position: absolute;
                     top: auto;
                     bottom: -2px;
@@ -77,14 +124,6 @@
                     border-radius: 4px;
                     transform-origin: 50% 50%;
                     transform: translateX(-50%) rotate(45deg);
-                }
-
-                &.active {
-                    @keyframes float { from { transform: translateY(0px); } to { transform: translateY(-5px); } }
-                    animation-name: float;
-                    animation-duration: 0.5s;
-                    animation-direction: alternate;
-                    animation-iteration-count: infinite;
                 }
             }
         }
