--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,11 +1,11 @@
-$color-primary: #212121;
-$color-primary-light: #303030;
-$color-primary-dark: #141414;
-$color-background: $color-primary-dark;
+$color-primary: #33cc99;
+$color-primary-variant: #399e65;
 
-$color-secondary: #33cc99;
-$color-secondary-light: #71ffca;
-$color-secondary-dark: #009a6b;
+$color-secondary: #24afc4;
+$color-secondary-variant: #2e7794;
 
-$color-font-primary: #e0e0e0;
-$color-font-secondary: $color-primary-dark;
+$color-background: #1e1f24;
+$color-background-variant: #24292e;
+
+$color-font-light: #e8e8e8;
+$color-font-dark: $color-background;
